--- a/databases/py-bdb-xml/Makefile
+++ b/databases/py-bdb-xml/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2006/06/08 12:22:17 joerg Exp $
+# $NetBSD: Makefile,v 1.11 2007/06/08 12:25:00 wiz Exp $
 
 DISTNAME=	dbxml-1.2.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/db/bdb-/}
-PKGREVISION=	5
+PKGREVISION=	6
 CATEGORIES=	databases python
 MASTER_SITES=	http://www.sleepycat.com/update/snapshot/
 
