--- a/databases/py-bsddb3/Makefile
+++ b/databases/py-bsddb3/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.21 2006/03/04 21:29:11 jlam Exp $
+# $NetBSD: Makefile,v 1.22 2007/06/08 12:25:00 wiz Exp $
 #
 
 DISTNAME=	bsddb3-4.4.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	databases python
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=pybsddb/}
 
