--- a/devel/kdesdk3/Makefile
+++ b/devel/kdesdk3/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.55 2007/01/26 03:28:08 markd Exp $
+# $NetBSD: Makefile,v 1.56 2007/06/08 12:25:01 wiz Exp $
 
 DISTNAME=	kdesdk-${_KDE_VERSION}
+PKGREVISION=	1
 CATEGORIES=	devel
 COMMENT=	Support applications and tools used by KDE developers
 
