--- a/devel/kdevelop-base/Makefile
+++ b/devel/kdevelop-base/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.63 2007/05/23 13:52:58 markd Exp $
+# $NetBSD: Makefile,v 1.64 2007/06/08 12:25:01 wiz Exp $
 
 DISTNAME=	kdevelop-3.4.1
 PKGNAME=	kdevelop-base-3.4.1
+PKGREVISION=	1
 CATEGORIES=	devel kde
 
 HOMEPAGE=	http://www.kdevelop.org/
