--- a/devel/py-subversion/Makefile
+++ b/devel/py-subversion/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.24 2006/11/03 19:34:11 joerg Exp $
+# $NetBSD: Makefile,v 1.25 2007/06/08 12:25:02 wiz Exp $
 
 PKGNAME=	${PYPKGPREFIX}-subversion-${SVNVER}
+PKGREVISION=	1
 COMMENT=	Python bindings and tools for Subversion
 
 PKG_DESTDIR_SUPPORT=	user-destdir
