--- a/mail/isync/Makefile
+++ b/mail/isync/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.20 2007/01/18 18:26:21 tonio Exp $
+# $NetBSD: Makefile,v 1.21 2007/06/08 12:25:04 wiz Exp $
 #
 
 DISTNAME=	isync-1.0.3
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	mail net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=isync/}
 
