--- a/net/dctc/Makefile
+++ b/net/dctc/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.33 2006/06/06 19:05:29 joerg Exp $
+# $NetBSD: Makefile,v 1.34 2007/06/08 12:25:04 wiz Exp $
 #
 
 DISTNAME=	dctc-0.85.4
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	net
 MASTER_SITES=	http://www.ac2i.tzo.com/dctc/ \
 		http://brainz.servebeer.com/dctc/
