--- a/net/gift-openft/Makefile
+++ b/net/gift-openft/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2007/01/25 23:32:27 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2007/06/08 12:25:05 wiz Exp $
 #
 
 DISTNAME=	gift-openft-0.2.1.6
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gift/}
 
