--- a/parallel/sge/Makefile
+++ b/parallel/sge/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.23 2007/01/25 19:46:55 markd Exp $
+# $NetBSD: Makefile,v 1.24 2007/06/08 12:25:05 wiz Exp $
 #
 
 PKGNAME=		sge-6.0.8
-PKGREVISION=		1
+PKGREVISION=		2
 DISTNAME=		sge-V60u8_TAG-src
 CATEGORIES=		parallel sysutils
 MASTER_SITES=		# empty
