--- a/www/p5-Kwiki-ModPerl/Makefile
+++ b/www/p5-Kwiki-ModPerl/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/03/12 12:37:59 obache Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/08 12:25:06 wiz Exp $
 
 DISTNAME=	Kwiki-ModPerl-0.09
 PKGNAME=	p5-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Kwiki/}
 
