--- a/www/p5-libapreq2/Makefile
+++ b/www/p5-libapreq2/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.20 2007/06/08 11:30:09 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2007/06/08 12:25:06 wiz Exp $
 
 DISTNAME=	libapreq2-2.08
 PKGNAME=	p5-${DISTNAME}
+PKGREVISION=	1
 SVR4_PKGNAME=	p5la2
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_APACHE:=httpd/libapreq/}
