--- a/misc/koffice/Makefile
+++ b/misc/koffice/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.93 2007/02/27 18:21:08 veego Exp $
+# $NetBSD: Makefile,v 1.94 2007/06/08 12:50:14 markd Exp $
 
-DISTNAME=	koffice-1.6.2
+DISTNAME=	koffice-1.6.3
 CATEGORIES=	misc kde
-MASTER_SITES=	${MASTER_SITE_KDE:=koffice-1.6.2/src/}
+MASTER_SITES=	${MASTER_SITE_KDE:=koffice-1.6.3/src/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	markd@NetBSD.org
