--- a/audio/gst-plugins0.10-fluendo-mp3/Makefile
+++ b/audio/gst-plugins0.10-fluendo-mp3/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2006/08/22 14:01:11 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2007/06/08 13:03:22 wiz Exp $
 #
 
-DISTNAME=		gst-fluendo-mp3-0.10.2
+DISTNAME=		gst-fluendo-mp3-0.10.6
 CATEGORIES=		audio
 MASTER_SITES=		http://core.fluendo.com/gstreamer/src/gst-fluendo-mp3/
 EXTRACT_SUFX=		.tar.bz2
