--- a/databases/p5-BerkeleyDB/Makefile
+++ b/databases/p5-BerkeleyDB/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.17 2006/03/04 21:29:09 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2007/06/08 13:11:53 wiz Exp $
 #
 
 DISTNAME=	BerkeleyDB-0.27
 PKGNAME=	p5-${DISTNAME}
+PKGREVISION=	1
 SVR4_PKGNAME=	p5bdb
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=BerkeleyDB/}
