--- a/mail/exim/Makefile
+++ b/mail/exim/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.82 2007/05/18 14:24:11 abs Exp $
+# $NetBSD: Makefile,v 1.83 2007/06/08 13:11:56 wiz Exp $
 
 DISTNAME=	exim-4.66
+PKGREVISION=	1
 CATEGORIES=	mail net
 MASTER_SITES=	ftp://ftp.exim.org/pub/exim/exim4/ \
 		ftp://ftp.csx.cam.ac.uk/pub/software/email/exim/exim4/ \
