--- a/comms/lrzsz/Makefile
+++ b/comms/lrzsz/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2006/03/04 21:29:05 jlam Exp $
+# $NetBSD: Makefile,v 1.25 2007/06/08 13:55:41 obache Exp $
 
 DISTNAME=	lrzsz-0.12.20
 CATEGORIES=	comms
@@ -17,6 +17,7 @@ GNU_CONFIGURE=		yes
 
 .if (${OPSYS} == "SunOS" || ${OPSYS} == "Darwin" || ${OPSYS} == "Interix" \
 	|| ${OPSYS} == "Linux")
+BROKEN_GETTEXT_DETECTION=yes
 .  include "../../devel/gettext-lib/buildlink3.mk"
 LOCALE_SUFFIX=		mo
 .else
