--- a/audio/libtunepimp/Makefile
+++ b/audio/libtunepimp/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2007/02/22 19:01:14 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2007/06/08 17:02:07 wiz Exp $
 
 DISTNAME=		libtunepimp-0.5.3
-PKGREVISION=		2
+PKGREVISION=		3
 CATEGORIES=		audio
 MASTER_SITES=		ftp://ftp.musicbrainz.org/pub/musicbrainz/ \
 			http://ftp.musicbrainz.org/pub/musicbrainz/
@@ -25,6 +25,7 @@ pre-configure:
 .include "../../audio/flac/buildlink3.mk"
 .include "../../audio/musicbrainz/buildlink3.mk"
 .include "../../audio/libmad/buildlink3.mk"
+.include "../../audio/libmpcdec/buildlink3.mk"
 .include "../../audio/libofa/buildlink3.mk"
 .include "../../audio/libvorbis/buildlink3.mk"
 .include "../../audio/taglib/buildlink3.mk"
