--- a/archivers/ppunpack/Makefile
+++ b/archivers/ppunpack/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.20 2006/05/10 12:31:46 gdt Exp $
+# $NetBSD: Makefile,v 1.21 2007/06/08 18:30:31 wiz Exp $
 
 DISTNAME=	ppsmall-1.0
 PKGNAME=	ppunpack-1.0
 CATEGORIES=	archivers
-MASTER_SITES=	ftp://de.aminet.net/pub/aminet/misc/unix/ \
-		ftp://us.aminet.net/pub/aminet/misc/unix/
+MASTER_SITES=	ftp://us.aminet.net/pub/aminet/misc/unix/
 EXTRACT_SUFX=	.tar.Z
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
