--- a/archivers/undms/Makefile
+++ b/archivers/undms/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.17 2006/03/04 21:28:53 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2007/06/08 18:30:32 wiz Exp $
 
 DISTNAME=	undms-1.3.c
 PKGNAME=	undms-1.3
 CATEGORIES=	archivers
-MASTER_SITES=	ftp://de.aminet.net/pub/aminet/misc/unix/ \
-		ftp://us.aminet.net/pub/aminet/misc/unix/
+MASTER_SITES=	ftp://us.aminet.net/pub/aminet/misc/unix/
 EXTRACT_SUFX=	.Z
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
