--- a/archivers/unlzx/Makefile
+++ b/archivers/unlzx/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.18 2006/03/04 21:28:54 jlam Exp $
+# $NetBSD: Makefile,v 1.19 2007/06/08 18:30:32 wiz Exp $
 
 DISTNAME=	unlzx.c
 PKGNAME=	unlzx-1.1
 CATEGORIES=	archivers
-MASTER_SITES=	ftp://de.aminet.net/pub/aminet/misc/unix/ \
-		ftp://us.aminet.net/pub/aminet/misc/unix/
+MASTER_SITES=	ftp://us.aminet.net/pub/aminet/misc/unix/
 EXTRACT_SUFX=	.gz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
