--- a/audio/libdca/Makefile
+++ b/audio/libdca/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2007/03/08 19:25:32 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2007/06/08 18:34:38 wiz Exp $
 #
 
 DISTNAME=	libdts-0.0.2
 PKGNAME=	${DISTNAME:S/ts/ca/}
 CATEGORIES=	audio
-MASTER_SITES=	http://debian.unnet.nl/pub/videolan/libdts/0.0.2/ \
-		http://download.videolan.org/pub/videolan/libdca/0.0.2/
+MASTER_SITES=	http://debian.unnet.nl/pub/videolan/libdts/0.0.2/
 
 MAINTAINER=	shattered@users.sourceforge.net
 HOMEPAGE=	http://developers.videolan.org/libdca.html
