--- a/audio/mbrola/Makefile
+++ b/audio/mbrola/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.13 2006/12/28 11:47:52 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2007/06/08 18:34:38 wiz Exp $
 
 DISTNAME=		mbr301h
 PKGNAME=		mbrola-301h
 PKGREVISION=		1
 CATEGORIES=		audio
-MASTER_SITES=		http://tcts.fpms.ac.be/synthesis/mbrola/bin/netbsd/ \
-			http://www.festvox.org/mbrola/bin/netbsd/
+MASTER_SITES=		http://tcts.fpms.ac.be/synthesis/mbrola/bin/netbsd/
 EXTRACT_SUFX=		.zip
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
