--- a/databases/db/Makefile
+++ b/databases/db/Makefile
@@ -1,11 +1,9 @@
-# $NetBSD: Makefile,v 1.26 2006/03/04 21:29:07 jlam Exp $
+# $NetBSD: Makefile,v 1.27 2007/06/08 18:35:38 wiz Exp $
 
 DISTNAME=	db-2.7.7
 PKGREVISION=	2
 CATEGORIES=	databases
-MASTER_SITES=	http://www.sleepycat.com/update/snapshot/ \
-		ftp://ftp.cdrom.com/pub/perl/CPAN/src/misc/ \
-		ftp://ftp.gwdg.de/pub/languages/perl/CPAN/src/misc/
+MASTER_SITES=	ftp://ftp.gwdg.de/pub/languages/perl/CPAN/src/misc/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.sleepycat.com/
