--- a/devel/acr/Makefile
+++ b/devel/acr/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.2 2006/10/04 21:35:58 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2007/06/08 18:39:22 wiz Exp $
 #
 
 DISTNAME=		acr-0.4
 CATEGORIES=		devel
-MASTER_SITES=		http://cvs.nopcode.org/ftp/acr/ \
-			ftp://ftp.nopcode.org/prj/acr/
+MASTER_SITES=		ftp://ftp.nopcode.org/prj/acr/
 
 MAINTAINER=		pancake@phreaker.net
 HOMEPAGE=		http://news.nopcode.org/pancake/acr.html
