--- a/devel/glib/Makefile
+++ b/devel/glib/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.84 2007/01/18 19:50:54 rillig Exp $
+# $NetBSD: Makefile,v 1.85 2007/06/08 18:39:23 wiz Exp $
 
 DISTNAME=		glib-1.2.10
 PKGREVISION=		10
 CATEGORIES=		devel
 MASTER_SITES=		ftp://ftp.gtk.org/pub/gtk/v1.2/ \
-			ftp://ftp.cs.umn.edu/pub/gimp/gtk/v1.2/ \
 			${MASTER_SITE_GNOME:=sources/glib/1.2/}
 
 MAINTAINER=		tron@NetBSD.org
