--- a/devel/tla/Makefile
+++ b/devel/tla/Makefile
@@ -1,11 +1,9 @@
-# $NetBSD: Makefile,v 1.31 2007/02/17 20:59:50 wiz Exp $
+# $NetBSD: Makefile,v 1.32 2007/06/08 18:39:24 wiz Exp $
 #
 
 DISTNAME=	tla-1.3.5
 CATEGORIES=	devel scm
-MASTER_SITES=	${MASTER_SITE_GNU:=gnu-arch/}		\
-		http://www.gnuarch.org/releases/	\
-		http://www.seyza.com/gnu-releases/
+MASTER_SITES=	${MASTER_SITE_GNU:=gnu-arch/}
 
 MAINTAINER=	recht@NetBSD.org
 HOMEPAGE=	http://regexps.srparish.net/
