--- a/sysutils/dvdisaster/Makefile
+++ b/sysutils/dvdisaster/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/06/08 20:19:13 heinz Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/08 20:35:37 heinz Exp $
 #
 
 DISTNAME=		dvdisaster-0.70.4
+PKGREVISION=		2
 CATEGORIES=		sysutils
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=dvdisaster/}
 EXTRACT_SUFX=		.tar.bz2
